--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 PORT=8000
 MONGODB_URI=mongodb+srv://rahulpawar:G81X1U184IVBekyd@festbuzz.qhbjwdp.mongodb.net/?retryWrites=true&w=majority&appName=festbuzz
 JWT_SECRET=festadmin
+
+
+CLOUDINARY_CLOUD_NAME=dlsv90kui
+CLOUDINARY_API_KEY=244223151738921
+CLOUDINARY_API_SECRET=PrN5EjyWtDlu9dj0bZn9KHQPpqE
