--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ JWT_SECRET=festadmin
 CLOUDINARY_CLOUD_NAME=dlsv90kui
 CLOUDINARY_API_KEY=244223151738921
 CLOUDINARY_API_SECRET=PrN5EjyWtDlu9dj0bZn9KHQPpqE
+
+# AWS
+AWS_REGION=ap-south-1
+BUCKET=festbuzz
+AWS_ACCESS_KEY_ID=AKIA6KJBJEHAQCNMBIUO
+AWS_SECRET_ACCESS_KEY=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
+
+# urls3=https://festbuzz.s3.ap-south-1.amazonaws.com/
