otp email in participant done

--- a/.env
+++ b/.env
@@ -13,4 +13,9 @@ BUCKET=festbuzz
 AWS_ACCESS_KEY_ID=AKIA6KJBJEHAQCNMBIUO
 AWS_SECRET_ACCESS_KEY=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
 
+#Email
+EMAIL_USER=project_platform@progneur.com
+EMAIL_PASS=ipomzaqpdlbjcryn
+OTP_EXPIRY=5
+
 # urls3=https://festbuzz.s3.ap-south-1.amazonaws.com/
