--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.6"
+    "nodemailer": "^7.0.6",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
